fix bearer token null and jwt deprecated parser